[gd_scene load_steps=10 format=2]

[ext_resource path="res://node_script/interactable_head.gd" type="Script" id=1]
[ext_resource path="res://data/font/Press_Start_2P_Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://http_request_demo.gd" type="Script" id=3]
[ext_resource path="res://node_script/interactable_head_area.gd" type="Script" id=4]
[ext_resource path="res://node_script/TextBox.gd" type="Script" id=5]

[sub_resource type="QuadMesh" id=7]

[sub_resource type="ViewportTexture" id=30]
viewport_path = NodePath("IteractableHead/Viewport")

[sub_resource type="SpatialMaterial" id=31]
resource_local_to_scene = true
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_texture = SubResource( 30 )

[sub_resource type="DynamicFont" id=10]
size = 39
font_data = ExtResource( 2 )

[node name="IteractableHead" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.16377, 0 )
collision_layer = 2
script = ExtResource( 4 )

[node name="UIActorScreen" type="MeshInstance" parent="Area"]
transform = Transform( 1.54, 0, 0, 0, 0.9, 0, 0, 0, 1.429, -1.31097, 1.70821, -0.528605 )
visible = false
mesh = SubResource( 7 )
material/0 = SubResource( 31 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.619351, 0.823198 )
polygon = PoolVector2Array( 0, 0, 3, 3, -3, 3 )

[node name="HTTPRequestDemo" type="HTTPRequest" parent="."]
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
render_target_v_flip = true

[node name="UIActor" type="Control" parent="Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextBox" type="Control" parent="Viewport/UIActor"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Viewport/UIActor/TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.666667, 0.666667, 0.666667, 1 )

[node name="ActorTextOutput" type="Label" parent="Viewport/UIActor/TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Actor Text"
align = 1
valign = 1
autowrap = true

[node name="UIPlayerInput" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -120.0
margin_right = 240.0
margin_bottom = -40.0

[node name="TextBox" type="Control" parent="UIPlayerInput"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="LineEdit" type="LineEdit" parent="UIPlayerInput/TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="request_completed" from="HTTPRequestDemo" to="." method="_on_HTTPRequestDemo_request_completed"]
[connection signal="request_completed" from="HTTPRequestDemo" to="HTTPRequestDemo" method="_on_HTTPRequest_request_completed"]
[connection signal="text_entered" from="UIPlayerInput/TextBox/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="text_entered" from="UIPlayerInput/TextBox/LineEdit" to="HTTPRequestDemo" method="_on_LineEdit_text_entered"]
[connection signal="text_entered" from="UIPlayerInput/TextBox/LineEdit" to="UIPlayerInput/TextBox" method="_on_LineEdit_text_entered"]
